# homelab

./: .editorconfig  .gitignore  .gitmodules  .sops.yaml  AGENTS.md  CLAUDE.md  Pipfile  README.md  activate.sh  ansible.cfg  configuration.nix  flake.nix  justfile  main.sops.yaml  pyproject.toml  requirements.yaml  requirements.yml
.claude/: settings.json
bootstrap/: configuration.nix  disko-config.nix  flake.nix  justfile
image/: main.nix
inventories/main/: hosts  hosts.ini
nixos/: main.nix
node/: disko-config.nix  hardware-configuration.nix  main.nix
node/k8s/: authelia.nix  authentik.nix  backup.nix  cert-manager.nix  couchdb.nix  frp-operator.nix  frpc.nix  gitea.nix  home-assistant.nix  ingress.nix  intel-nfd.nix  media.nix  metallb.nix  netdata.nix  nextcloud.nix  postgres-operator.nix  prometheus-stack.nix  reloader.nix  samba-operator.nix  storage.nix  syncthing.nix  tailscale-operator.nix  traefik-external.nix  traefik.nix  valkey-operator.nix
node/k8s/manifest/: envoy-gateway-crds.yaml  envoy-gateway.yaml  intel-nfd-labeled-nodes.yaml  intel-nfd.yaml  intel-node-feature-rules.yaml  samba-operator.yaml
plays/: bootstrap.main.yaml  connect.main.yaml  k8s-apps.main.yaml  k8s-platform.main.yaml  k8s.main.yaml  main.yaml
roles/k8s-cert-manager/defaults/: main.yml
roles/k8s-cert-manager/tasks/: main.yml
roles/k8s-cert-manager/vars/: main.yml
roles/k8s-duckdns/: README.md
roles/k8s-ingress-nginx/: README.md
roles/k8s-intel-gpu-plugin/: README.md
roles/k8s-jackett/: README.md
roles/k8s-letsencrypt-cloudflare/: README.md
roles/k8s-local-path-provisioner/: README.md
roles/k8s-metallb/: README.md
roles/k8s-postgresql/: README.md
roles/k8s-prometheus-stack/: README.md
roles/k8s-syncthing/: README.md
roles/rclone-backup/: README.md
roles/storage/: README.md
roles/ufw-rules/: README.md
roles/unbound-dns/: README.md
script/: cert.py
secrets/: k8s.sops.yaml  main.yaml
secrets/main/: connect.sops.yaml
(+123 files in other folders)
