[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ansible = "<10"
netaddr = "^1.3.0"
pbr = "^7.0.1"
jmespath = "^1.0.1"
ruamel-yaml = "^0.18.16"
kubernetes = "^34.1.0"
docker = "^7.1.0"
markupsafe = "^3.0.3"
ansible-vault = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ansible-lint = "^25.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [".cache/**", ".local/**", ".venv/**", ".vscode/**", "3d/**"]
