[project]
name = "homelab"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">3.10,<4.0"
dependencies = ["cryptography (>=48.0.0,<49.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pylint.messages_control]
disable = [
  "missing-function-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
  "invalid-name",
  "no-member",
  "no-name-in-module",
  "too-few-public-methods",
  "undefined-loop-variable",
  "too-many-arguments",
  "unused-import",
]
